--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+/* ユーザーエージェントスタイルシート(ブラウザ側のデフォルトCSS)が効いてしまっているので上書き */
+body,
+h1,
+p {
+  margin: 0;
+}
+body {
+  font-family: " .SF NS";
+}
+
+div {
+  unicode-bidi: normal;
+}
+
 /* :root {
 --background: #ffffff;
   --foreground: #171717;
